# OctoPrint-Gcodequeuinginjection

./: .gitignore  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml
extras/: GcodeQueuingInjection.md  README.txt
extras/github/: bug_report.yml  feature_request.yml
octoprint_GcodeQueuingInjection/: GcodequeuinginjectionPlugin.py  __init__.py  calib_capture.py  calib_capture_standalone.py  camera.py  config.py  gcode_sequences.py  inference.py  renderer.py  visualizations.py
octoprint_GcodeQueuingInjection/static/js/: GcodeQueuingInjection.js
octoprint_GcodeQueuingInjection/templates/: GcodeQueuingInjection_settings.jinja2
translations/: README.txt
